--- a/QuanLyCoffee/App.config
+++ b/QuanLyCoffee/App.config
@@ -1,16 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="QuanLyCoffee.Properties.Settings.QL_CoffeeConnectionString"
-            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\QL_Coffee.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="QuanLyCoffee.Properties.Settings.QLCFConnectionString"
-            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\QLCF.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="QuanLyCoffee.Properties.Settings.QL_CoffeeConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\QL_Coffee.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="QuanLyCoffee.Properties.Settings.QLCFConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\QLCF.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
 </configuration>
