--- a/QuanLyCoffee/QuanLyCoffee.csproj
+++ b/QuanLyCoffee/QuanLyCoffee.csproj
@@ -99,11 +99,11 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmQLNhanVien.cs">
+    <Compile Include="frmThemTaiKhoan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmQLNhanVien.Designer.cs">
-      <DependentUpon>FrmQLNhanVien.cs</DependentUpon>
+    <Compile Include="frmThemTaiKhoan.Designer.cs">
+      <DependentUpon>frmThemTaiKhoan.cs</DependentUpon>
     </Compile>
     <Compile Include="frmQuanLy.cs">
       <SubType>Form</SubType>
@@ -135,8 +135,8 @@
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmQLNhanVien.resx">
-      <DependentUpon>FrmQLNhanVien.cs</DependentUpon>
+    <EmbeddedResource Include="frmThemTaiKhoan.resx">
+      <DependentUpon>frmThemTaiKhoan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmQuanLy.resx">
       <DependentUpon>frmQuanLy.cs</DependentUpon>
